--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,6 @@
-/*-----------------------------------*\
-  #style.css
-\*-----------------------------------*/
-
-/**
- * copyright 2022 codewithsadee
- */
-
-
-
-
-
-/*-----------------------------------*\
-  #CUSTOM PROPERTY
-\*-----------------------------------*/
 
 :root {
 
-  /**
-   * colors
-   */
 
   --eerie-black_80: hsla(225, 9%, 9%, 0.8);
   --eerie-black_60: hsla(225, 9%, 9%, 0.6);
@@ -30,10 +12,6 @@
   --blue-ryb: hsl(232, 100%, 60%);
   --white_20: hsla(0, 0%, 100%, 0.2);
   --white: hsl(0, 0%, 100%);
-
-  /**
-   * typography
-   */
 
   --ff-inter: 'Inter', sans-serif;
 
@@ -51,36 +29,18 @@
   --fw-500: 500;
   --fw-300: 300;
 
-  /**
-   * spacing
-   */
 
   --section-padding: 50px;
 
-  /**
-   * radius
-   */
 
   --radius-16: 16px;
   --radius-pill: 200px;
   --radius-circle: 50%;
 
-  /**
-   * transition
-   */
-
   --transition-1: 0.25s ease;
   --transition-2: 0.5s ease;
 
 }
-
-
-
-
-
-/*-----------------------------------*\
-  #RESET
-\*-----------------------------------*/
 
 *,
 *::before,
@@ -146,14 +106,6 @@ body.active { overflow: hidden; }
 ::-webkit-scrollbar-thumb { background-color: hsl(0, 0%, 80%); }
 
 ::-webkit-scrollbar-thumb:hover { background-color: hsl(0, 0%, 70%); }
-
-
-
-
-
-/*-----------------------------------*\
-  #REUSED STYLE
-\*-----------------------------------*/
 
 .section { margin-inline: 15px; }
 
@@ -413,7 +365,9 @@ body.active { overflow: hidden; }
 }
 
 
-
+.submit{
+  background-color: antiquewhite;
+}
 
 
 
@@ -1057,4 +1011,29 @@ body.active { overflow: hidden; }
     padding-inline-end: 100px;
   }
 
+}
+.comments {
+  margin-top: 5px;
+  border-top: 0.5px solid #ccc;
+  padding-top: 0px;
+}
+
+#commentList {
+  list-style-type: none;
+  padding: 0;
+}
+
+#commentList li {
+  padding: 5px 0;
+  border-bottom: 0.5px solid #eee;
+}
+
+#commentForm {
+  display: flex;
+  margin-top: 5px;
+}
+
+#commentInput {
+  flex-grow: 1;
+  padding: 5px;
 }
